--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -68,10 +68,12 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 
+
 <div id="footer">
     {% block footer %}
-        &copy; Copyright 2021 by <a href="#">Juliann Cabral</a>.
+        &copy; Copyright 2021 by <a href="#">Neal Patel</a>.
     {% endblock %}
+    
 </div>
 </body>
 </html>
