--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">My Calculator</a>
+    <a class="navbar-brand" href="#">Calculator</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,18 +31,6 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/result">Results</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/TheBeginning">The Beginning</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/BrowserWars">Browser Wars</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/Concepts">Concepts</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/OOP">OOP</a>
             </li>
         </ul>
     </div>
